# ur12e-pick-n-place-using-ros2-ur-driver-moveit2

./: .~lock.commands_log.odt#  commands_log.odt  readme.md
src/my_ur12e/config/: controllers.yaml  ur_controllers.yaml
src/my_ur12e/launch/: my_robot.launch.py  ur12e_full.launch.py  ur12e_full.launch.py.bak1
src/my_ur12e/urdf/: ur_minimal.xacro
src/my_ur_description/: package.xml  package.xml.bak
src/my_ur_description/launch/: my_robot.launch.py
src/my_ur_description/scripts/: move_plan_xyz_theta.py  setup_moveit_scene2.py  vision_guided_sorting_brain2.py
ursim_programs/: default.installation  default.variables  programs.UR12e
